# ucheoma-replit

./: main.py  pyproject.toml
components/: charts.py
models/: transaction.py  user.py
pages/: 1_dashboard.py
utils/: ai_helper.py  auth.py  database.py  email_helper.py  stripe_helper.py
